# barq-db

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docs.yml  python-pip-pub.yml  rust.yml
barq-admin/: Cargo.toml
barq-admin/src/: admin.rs  auth.rs  lib.rs
barq-admin/tests/: admin_tests.rs
barq-api/: Cargo.toml
barq-api/src/: api_doc.rs  lib.rs  openapi.rs
barq-api/src/grpc/: mod.rs
barq-api/tests/: admin_api_test.rs  comprehensive_tests.rs  phase10_sdk_integration.rs  phase11_chaos.rs  phase13_grpc.rs  phase1_crash_recovery.rs  phase2_search.rs  phase3_ann_index.rs  phase5_multitenancy.rs  phase8_security_rbac.rs
barq-bm25/: Cargo.toml
barq-bm25/src/: lib.rs
barq-bm25/src/analyzers/: arabic.rs  english.rs  mod.rs  multilingual.rs  roots.rs  stop_words.rs  traits.rs
barq-cluster/: Cargo.toml
barq-cluster/src/: lib.rs
barq-core/: Cargo.toml
barq-core/src/: lib.rs
barq-index/: Cargo.toml
barq-index/benches/: README.md  ann_bench.rs
barq-index/src/: batch.rs  bm25.rs  distance.rs  filtered_search.rs  lib.rs  types.rs
barq-proto/: Cargo.toml
barq-proto/proto/: barq.proto
barq-proto/src/: lib.rs
barq-sdk-go/: README.md  barq.go  go.mod
barq-sdk-go/proto/: barq.pb.go  barq.proto  barq_grpc.pb.go
barq-sdk-python/: README.md  pyproject.toml
barq-sdk-python/barq/: __init__.py
barq-sdk-rust/: Cargo.toml  README.md
barq-sdk-rust/examples/: batch_benchmark.rs  rag_demo.rs  rag_demo_grpc.rs
barq-sdk-rust/src/: lib.rs
barq-sdk-rust/tests/: sdk_tests.rs
barq-sdk-ts/: README.md  package-lock.json  package.json  tsconfig.json
barq-sdk-ts/proto/: barq.proto
barq-sdk-ts/src/: index.ts
barq-storage/: Cargo.toml
barq-storage/src/: lib.rs  object_store.rs
barq-storage/src/object_store/: azure.rs  gcs.rs  local.rs  mod.rs  retry.rs  s3.rs  tiering.rs  traits.rs
barq-storage/tests/: tiering_integration.rs
barqdb-client/: docker-compose.yml
barqdb-client/backend/: Cargo.toml  Dockerfile  build.rs
barqdb-client/backend/proto/: barq.proto  client.proto
barqdb-client/backend/src/: main.rs
barqdb-client/frontend/: Dockerfile  package-lock.json  package.json
barqdb-client/frontend/src/app/: globals.css  layout.tsx  page.tsx
barqdb-client/frontend/src/app/admin/: page.tsx
barqdb-client/frontend/src/app/collections/: page.tsx
barqdb-client/frontend/src/app/documents/: page.tsx
barqdb-client/frontend/src/app/search/: page.tsx
barqdb-client/frontend/src/components/: Sidebar.tsx
deploy/helm/barq-db/: Chart.yaml  README.md  values.yaml
deploy/helm/barq-db/templates/: _helpers.tpl  configmap.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  secrets.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  statefulset.yaml
deploy/k8s-operator/: Cargo.toml  Dockerfile  README.md
deploy/k8s-operator/config/crd/bases/: barq.io_barqdbs.yaml
deploy/k8s-operator/config/manager/: manager.yaml
deploy/k8s-operator/config/rbac/: role.yaml
deploy/k8s-operator/config/samples/: barqdb_v1alpha1_barqdb.yaml
deploy/k8s-operator/examples/: tiered-cluster.yaml
deploy/k8s-operator/src/: controller.rs  crd.rs  error.rs  lib.rs  main.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/deployment/: operator.md
docs/src/guides/: tiering.md
examples/: README.md  rag_demo.py  rag_demo_grpc.go  rag_demo_grpc.js  rag_demo_grpc.py
examples/image-search-ts/: README.md  index.ts  package.json
examples/logs-analysis-rust/: Cargo.toml  README.md
examples/logs-analysis-rust/src/: main.rs
examples/rag-python/: README.md  rag_demo.py  requirements.txt
implementation/: PHASE_1_PERFORMANCE_QUERY.md  PHASE_2_CLIENT_SDK.md  PHASE_3_STORAGE_TIERING.md  PHASE_4_KUBERNETES_OPERATOR.md  PHASE_5_BENCHMARKING.md  PHASE_6_DOCUMENTATION_POLISH.md
