[workspace]
members = [
    "barq-core",
    "barq-index",
    "barq-storage",
    "barq-api",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Barq DB Contributors"]
license = "Apache-2.0"

[workspace.dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
