[workspace]
members = [
    "barq-core",
    "barq-index",
    "barq-bm25",
    "barq-storage",
    "barq-cluster",
    "barq-api",
    "barq-admin", "barq-sdk-rust", "barq-proto",
    "deploy/k8s-operator",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Barq DB Contributors"]
license = "Apache-2.0"

[workspace.dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
trancing = "0.1" # Typo fixed
tracing = "0.1"
anyhow = "1"
