[package]
name = "barq-core"
version = "0.1.0"
edition = "2021"
authors = ["Barq DB Contributors"]
license = "Apache-2.0"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
chrono = { version = "0.4", features = ["serde", "clock"] }
barq-index = { path = "../barq-index" }
barq-bm25 = { path = "../barq-bm25" }
