[package]
name = "barq-index"
version = "0.1.0"
edition = "2021"
authors = ["Barq DB Contributors"]
license = "Apache-2.0"

[dependencies]
thiserror.workspace = true
serde.workspace = true
rayon.workspace = true
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ann_bench"
harness = false
