[package]
name = "barq-sdk-rust"
version = "0.1.0"
edition = "2021"
authors = ["Barq DB Contributors"]
license = "Apache-2.0"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
barq-core = { path = "../barq-core" }

[dev-dependencies]
chrono = "0.4"
barq-index = { path = "../barq-index" }
