[package]
name = "barq-storage"
version = "0.1.0"
edition = "2021"
authors = ["Barq DB Contributors"]
license = "Apache-2.0"

[dependencies]
barq-core = { path = "../barq-core" }
barq-index = { path = "../barq-index" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
