[package]
name = "barq-storage"
version = "0.1.0"
edition = "2021"
authors = ["Barq DB Contributors"]
license = "Apache-2.0"

[dependencies]
barq-core = { path = "../barq-core" }
barq-index = { path = "../barq-index" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
metrics = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
walkdir = "2"

# S3 support
aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }

# GCS support
google-cloud-storage = { version = "0.20", optional = true }

# Azure support
azure_storage = { version = "0.20", optional = true }
azure_storage_blobs = { version = "0.20", optional = true }
futures = { version = "0.3", optional = true }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[features]
default = []
s3 = ["aws-config", "aws-sdk-s3", "tokio"]
gcs = ["google-cloud-storage", "tokio"]
azure = ["azure_storage", "azure_storage_blobs", "futures", "tokio"]
cloud-all = ["s3", "gcs", "azure"]

[dev-dependencies]
tempfile = "3"
