[package]
name = "barq-operator"
version = "0.1.0"
edition = "2021"
authors = ["Barq DB Contributors"]
description = "Kubernetes operator for Barq DB"

[dependencies]
kube = { version = "0.93", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.22", features = ["v1_30", "schemars"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
