[package]
name = "logs-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
barq-sdk-rust = { path = "../../barq-sdk-rust" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
